welcome.lessons.welcome.loopdowhile.Poucet2.scala.error
Poucet:1: error: Missing closing brace `}' assumed here
while (sortieTrouvee()==false){
^Poucet:10: error: 'while' expected but 'if' found.
  if (nbBiscuit>=3){
  ^Poucet:16: error: '(' expected but ';' found.
avance() 
^